# axiom-client

./: .gitignore  CMakeLists.txt
assets/: test.sim.json
src/: main.c
src/client/: sim_loader.c  sim_loader.h
src/map/: map.c  map.h
src/render/: camera.c  camera.h  game_window.c  game_window.h  renderer.c  renderer.h  ui.c  ui.h
src/utils/: math_utils.c  math_utils.h
